# mobile-n10n

./: .gitignore  .sbtopts  .scala-steward.conf  .tool-versions  Dana-Mohammad.md  README.md  Vagrantfile  athena-tables.sql  build.sbt  build.sbt.post-migration  deploy.sh  dynamo.yaml  migrate-folders.sh  output-main.json  package-lock.json  package.json  proguard-rules.pro  registration-db.yaml  sbt-tc  scalastyle-config.xml  tokeep.pro  tokeep2.pro  version.sbt
.github/: CODEOWNERS  dependabot.yml
api-client/: README.markdown  version.sbt
api-models/: LICENSE  README.markdown
azure/: build.sbt
backup/: cfn.yaml  deploy.json  riff-raff.yaml
cdk/: .gitignore  .yarnrc.yml  README.md  package-lock.json  package.json  tsconfig.json
db-cleaner/: Cargo.toml  build.sh  cfn.yaml  riff-raff.yaml
db-cleaner/src/: cleaner.rs  guardian_lambda.rs  main.rs
eventconsumer/: README.md  cfn.yaml  riff-raff.yaml
fakebreakingnews/: fakebreakingnews-cfn.yaml  riff-raff.yaml
fakebreakingnewslambda/: fakebreakingnewslambda-cfn.yaml  riff-raff.yaml
football/: README.md  cfn.yaml  riff-raff.yaml
footballlambda/: riff-raff.yaml
liveactivities/: README.md  riff-raff.yaml
mobile-notifications-football/: README.md  riff-raff.yaml
notificationworkerlambda/: cfn.yaml  ecr.yaml  expired-registration-cleaner-cfn.yaml  harvester-cfn.yaml  platform-worker-cfn.yaml  registration-cleaning-worker-cfn.yaml  riff-raff.yaml  sender-worker-cfn.yaml  sender-workers-nested-cfn.yaml  topic-counter-cfn.yaml
project/: LocalDynamoDB.scala  LocalDynamoDBCommon.scala  common.scala  (+8 more)
(+964 files in other folders)
