[package]
name = "db-cleaner"
version = "0.1.0"
authors = ["The Guardian <noreply@theguardian.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
rusoto_core = {version = "0.36.0", default_features = false, features=["rustls"]}
rusoto_ssm = {version = "0.36.0", default_features = false, features=["rustls"]}
rusoto_credential = "^0.15"
postgres = "^0.15"
url = "1.7"

[[bin]]
name = "bootstrap"
path = "src/main.rs"